Fix bug that made 'book description' and 'copyright' info not visible on ToC page
Change Log:
-----------
* Book description and Copyright are now visible to the user on ToC page

--- a/themes/bombadil/style.css
+++ b/themes/bombadil/style.css
@@ -231,7 +231,14 @@ img {
 .third-block-wrap ul {
   line-height: 1.3 !important;
 }
-
+.copyright-text,
+.about-text {
+  color: #b4b4b4;
+  font-size: 0.85em;
+}
+.copyright-text a {
+  color: #b4b4b4;
+}
 
 /* ------------------------------------------------------------------------ *
  * STUDY PLAN PAGE
